--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <!-- NAVBAR - INICIO -->
         <nav class="navbar bg-body-tertiary fixed-top">
             <div class="container-fluid">
-              <a href="#">  <img src="./images/logo/GoodPayBanner.png" alt="Logo Banner" id="logo-header" /> </a>
+                <a href="#">
+                    <img src="./images/logo/GoodPayBanner.png" alt="Logo Banner" id="logo-header" />
+                </a>
                 O SEU BANCO
                 <!-- OFCANVAS INICIO -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -50,7 +52,32 @@
                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                                     <div class="accordion-body">
-                                        Login GoodPay (Conteudo)
+                                        <!-- FORM LOGIN - INICIO -->
+                                        <form>
+                                            <div class="input-group input-group-lg mb-3">
+                                                <span class="input-group-text"
+                                                    id="inputGroup-sizing-default">Email</span>
+                                                <input id="email" type="text" required class="form-control"
+                                                    aria-label="Sizing example input"
+                                                    aria-describedby="inputGroup-sizing-default" />
+                                            </div>
+                                            <div class="input-group input-group-lg mb-3">
+                                                <span class="input-group-text"
+                                                    id="inputGroup-sizing-default">Senha</span>
+                                                <input id="senha" type="password" required class="form-control"
+                                                    aria-label="Sizing example input"
+                                                    aria-describedby="inputGroup-sizing-default" />
+                                            </div>
+                                            <div class="d-grid gap-2">
+                                                <button id="btn-entrar" type="button" class="btn btn-outline-success">
+                                                    Entrar
+                                                </button>
+                                                <button class="btn btn-outline-dark" type="button">
+                                                    Cadastrar
+                                                </button>
+                                            </div>
+                                        </form>
+                                        <!-- FORM LOGIN - FIM-->
                                     </div>
                                 </div>
                             </div>
@@ -64,9 +91,7 @@
                                 </h2>
                                 <div id="flush-collapseTwo" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">
-                                        Ajuda (Conteudo)
-                                    </div>
+                                    <div class="accordion-body">Ajuda (Conteudo)</div>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -112,50 +137,62 @@
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="card">
-                        <img src="./images/banner/BannerGoodPay.png" class="d-block w-100" alt="Banner Carousel">
+                        <img src="./images/banner/BannerGoodPay.png" class="d-block w-100" alt="Banner Carousel" />
                         <div class="card-body">
                             <h3 class="card-title">Aproveite as promoções de hoje.</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga et minus tenetur. Magnam, eum. Mollitia recusandae, reprehenderit molestias commodi, tenetur natus nemo veniam itaque quisquam animi odio autem, quam possimus.
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
+                                et minus tenetur. Magnam, eum. Mollitia recusandae,
+                                reprehenderit molestias commodi, tenetur natus nemo veniam
+                                itaque quisquam animi odio autem, quam possimus.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="./images/banner/BannerGoodPay2.png" class="d-block w-100" alt="Banner Carousel">
+                        <img src="./images/banner/BannerGoodPay2.png" class="d-block w-100" alt="Banner Carousel" />
                         <div class="card-body">
                             <h3 class="card-title">Aproveite as promoções de hoje.</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, consequatur! Aut natus quod eaque dolorum odit quibusdam molestiae architecto repudiandae soluta, commodi quidem vitae, accusantium iure, nobis eligendi ducimus quae.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Velit, consequatur! Aut natus quod eaque dolorum odit
+                                quibusdam molestiae architecto repudiandae soluta, commodi
+                                quidem vitae, accusantium iure, nobis eligendi ducimus quae.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="./images/banner/BannerGoodPay3.png" class="d-block w-100" alt="Banner Carousel">
+                        <img src="./images/banner/BannerGoodPay3.png" class="d-block w-100" alt="Banner Carousel" />
                         <div class="card-body">
                             <h3 class="card-title">Aproveite as promoções de hoje.</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi recusandae minima in incidunt facere? Est repellat dignissimos libero nisi quia vel dolorem perferendis, tempore necessitatibus saepe earum. Fuga, at quam.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+                                recusandae minima in incidunt facere? Est repellat dignissimos
+                                libero nisi quia vel dolorem perferendis, tempore
+                                necessitatibus saepe earum. Fuga, at quam.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="./images/banner/BannerGoodPay4.png" class="d-block w-100" alt="Banner Carousel">
+                        <img src="./images/banner/BannerGoodPay4.png" class="d-block w-100" alt="Banner Carousel" />
                         <div class="card-body">
                             <h3 class="card-title">Aproveite as promoções de hoje.</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quibusdam laboriosam minus nesciunt totam dolorem magnam dignissimos rerum asperiores sapiente, excepturi eos molestiae quod cupiditate facilis nihil eum libero aliquam.
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                Obcaecati quibusdam laboriosam minus nesciunt totam dolorem
+                                magnam dignissimos rerum asperiores sapiente, excepturi eos
+                                molestiae quod cupiditate facilis nihil eum libero aliquam.
                             </p>
                         </div>
                     </div>
@@ -172,12 +209,13 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-            <!-- CAROUSEL - FIM -->
+        <!-- CAROUSEL - FIM -->
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
